--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,3 +1,5 @@
+<!-- options.html -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,7 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Options</title>
   </head>
-
   <body>
     <div id="root"></div>
     <script src="./index.tsx" type="module"></script>
